import { SymbolParser } from "../src/symbolParser";
import { PhpDocument } from "../src/symbol/phpDocument";
import { pathToUri, toRelative } from "../src/util/uri";
import * as path from 'path';
import * as fs from 'fs';
import { Parser, phraseTypeToString, tokenTypeToString } from "php7parser";

describe('namespaceDef', () => {
    it('should assign namespace to phpDocument', () => {
        let workspaceDir = path.resolve(__dirname, '..', 'case', 'namespaceDef');
        let files = fs.readdirSync(workspaceDir);
        
        for (let file of files) {
            let filePath = path.join(workspaceDir, file);
            let fileUri = pathToUri(filePath);

            if (file.endsWith('.php')) {
                const fileContent = fs.readFileSync(filePath).toString();
                let symbolParser = new SymbolParser(new PhpDocument(
                    fileUri,
                    fileContent
                ));
                let parseTree = Parser.parse(fileContent);
                
                fs.writeFile(
                    path.resolve(__dirname, '..', 'debug', file + '.ast.json'),
                    JSON.stringify(parseTree, (key, value) => {
                        if (key == 'modeStack') {
                            return undefined;
                        }
        
                        if (key == 'phraseType') {
                            return phraseTypeToString(value);
                        }
        
                        if (key == 'tokenType') {
                            return tokenTypeToString(value);
                        }
        
                        return value;
                    }, 2),
                    (err) => {
                        if (err) {
                            console.log(err);
                        }
                    }
                );

                symbolParser.traverse(parseTree);

                expect(symbolParser.getTree().toObject()).toMatchSnapshot();
            }
        }
    });
});